[pado_visualize] continue refactor

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ package_dir=
     =pado_visualize
 install_requires =
     dash
+    dash_bootstrap_components
     pado
     pandas
 build_requires =
