[pado_visualize] requirements update

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,10 +14,18 @@ python_requires = >=3.6.1
 package_dir=
     =pado_visualize
 install_requires =
-    dash
-    dash_bootstrap_components
     pado
+    dash
+    dash-bootstrap-components
+    dash-table
+    numpy
     pandas
-    tifffile
+    tifffile>=2020.10.1
+    pillow
+    tqdm
 build_requires =
     setuptools_scm
+
+[options.entry_points]
+console_scripts =
+    pado-visualize = pado_visualize.__main__.main
