[pado_visualize] setup.cfg fixes

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,11 +8,8 @@ classifiers =
 
 [options]
 packages =
-    pado.ext
-    pado.ext.visualize
+    pado_visualize
 python_requires = >=3.6.1
-package_dir=
-    =pado_visualize
 install_requires =
     pado
     dash
