--- a/setup.cfg
+++ b/setup.cfg
@@ -25,4 +25,4 @@ build_requires =
 
 [options.entry_points]
 console_scripts =
-    pado-visualize = pado_visualize.__main__.main
+    pado-visualize = pado_visualize.__main__:main
