--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ install_requires =
     dash
     dash-bootstrap-components
     dash-table
+    Flask-Caching
     numpy
     pandas
     tifffile>=2020.10.1
