pado_visualize: update dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,8 +13,11 @@ python_requires = >=3.6.1
 install_requires =
     pado
     dash
+    dash-auth
     dash-bootstrap-components
     dash-table
+    diskcache
+    dynaconf
     Flask-Caching
     numpy
     pandas
