--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,21 @@
+coverage/
+dist/*
+!dist/index.html
+node_modules/
+*.log
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
 # dotenv environment variable files
 .env*
 .cache/
-
-# Mac files
-.DS_Store
 
 # PyCharm
 .idea/
