pado_visualize: workaround for parcel webfont imports
lets move on and store the fa webfonts directly under /static so that parcel doesn't complain

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
       },
       {
         "match": "fa-*.{eot,svg,ttf,woff,woff2}",
-        "folder": "webfonts"
+        "folder": "."
       },
       {
         "match": "*.{js,js.map}",
