--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "eslint-plugin-prettier": "^3.3.1",
     "openseadragon": "^2.4.2",
     "parcel-bundler": "^1.12.5",
+    "parcel-plugin-static-files-copy": "^2.6.0",
     "parcel-plugin-structurize": "^2.4.0",
     "prettier": "^2.2.1",
     "sass": "^1.32.8"
+  },
+  "staticFiles": {
+    "staticPath": "pado_visualize/static_src",
+    "watcherGlob": "images/*.jpg"
   },
   "parcel-plugin-structurize": {
     "rules": [
