--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,11 @@
 {
-  presets: [
+  "presets": [
     [
-      '@babel/preset-env',
+      "@babel/preset-env",
       {
-        modules: false
+        "useBuiltIns": "usage",
+        "corejs": 3,
+        "targets": "> 0.25%, not dead"
       }
     ]
   ]
