--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "build": "parcel build --public-url /static -d pado_visualize/static pado_visualize/static_src/*.js"
   },
   "dependencies": {
+    "core-js": "^3.15.2",
+    "deck.gl": "^8.5.0",
     "images": "^3.2.3",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.8",
+    "@babel/preset-react": "^7.14.5",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
