--- a/setup.cfg
+++ b/setup.cfg
@@ -9,15 +9,13 @@ classifiers =
 [options]
 packages =
     find:
-python_requires = >=3.6.1
+python_requires = >=3.7
 install_requires =
-    dash
-    dash-auth
-    dash-bootstrap-components
-    dash-table
+    celery
     diskcache
     dynaconf
-    Flask-Caching
+    flask>=2.0.0
+    Flask-Caching>=1.8.0
     numpy
     pandas
     tifffile>=2020.10.1
