--- a/setup.cfg
+++ b/setup.cfg
@@ -9,21 +9,34 @@ classifiers =
 [options]
 packages =
     find:
-python_requires = >=3.7
+python_requires = >=3.9
 install_requires =
+    Flask-Caching>=1.8.0
+    Flask-JSGlue
+    appdirs
     celery
     diskcache
     dynaconf
-    flask>=2.0.0
-    Flask-Caching>=1.8.0
+    flask>=2
+    flower
+    fsspec
+    geojson-pydantic
+    imagecodecs
     numpy
+    orjson
+    pado
     pandas
-    tifffile>=2020.10.1
-    werkzeug
-    pyopenssl
+    pandas
     pillow
+    pyarrow
+    pydantic
+    pyopenssl
+    rasterio
+    redis
+    s3fs
+    shapely
+    tiffslide
     tqdm
-    plotly
 build_requires =
     setuptools_scm
 
