--- a/environment.devenv.yml
+++ b/environment.devenv.yml
@@ -14,33 +14,62 @@
 name: pado_visualize
 
 channels:
-  - sdvillal
-  - pytorch
   - conda-forge
 
 dependencies:
-  - python
+  - python=3.9  # let's not carry the 3.6, 3.7, 3.8 baggage for now
   - pip
 
+  # dev related
+  - nodejs
+  - pre-commit
+  - pytest
+  - pytest-cov
+  - mypy
+  - supervisor
+
+  # webapp related
+  - celery
   - diskcache
   - dynaconf
   - flask>=2
-  - flask-caching
+  - flask-caching>=1.8.0
   - flask-dance
+  - flower
+  - redis-py
   - werkzeug
   - pyopenssl
 
+  # data deps
   - numpy
   - pandas
-  - tifffile>=2020.10.1
-  - pillow
   - rasterio
 
+  # tiffslide deps
+  - fsspec
+  - imagecodecs
+  - pillow
+  - tifffile>=2020.9.22
+  - zarr
+
+  # pado deps
+  - appdirs
+  - orjson
+  - toml
+  - pyarrow
+  - shapely
+  - pydantic
+  - geojson-pydantic
+
+  # utils
   - tqdm
+  - s3fs
 
   - pip:
-    - git+ssh://git@github.com/bayer-science-for-a-better-life/pado.git#egg=pado
+    # flask extras
     - Flask-JSGlue
-    - tiffslide
 
+    # homemade dependencies
+    - git+ssh://git@github.com/bayer-science-for-a-better-life/pado.git#egg=pado
+    - tiffslide
     - "-e ."  # [ PADO_VISUALIZE_DEVEL ]
