--- a/package.json
+++ b/package.json
@@ -2,39 +2,46 @@
   "name": "pado_visualize",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
   "keywords": [],
   "author": "",
   "license": "MIT",
   "scripts": {
-    "build": "parcel build --public-url /static -d pado_visualize/static pado_visualize/static_src/*.js",
-    "watch": "parcel watch --public-url /static -d pado_visualize/static pado_visualize/static_src/*.js",
+    "build": "parcel build --public-url /static --dist-dir pado_visualize/static pado_visualize/static_src/*.js",
+    "watch": "parcel watch --public-url /static --dist-dir pado_visualize/static pado_visualize/static_src/*.js",
     "favicons": "node scripts/favicons.js"
   },
   "dependencies": {
+    "@deck.gl/geo-layers": "^8.5.6",
+    "@deck.gl/layers": "^8.5.6",
+    "@loaders.gl/core": "^3.0.11",
     "core-js": "^3.15.2",
     "deck.gl": "^8.5.0",
     "images": "^3.2.3",
+    "math.gl": "^3.5.4",
     "normalize.css": "^8.0.1",
     "openseadragon": "^2.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "regenerator-runtime": "^0.13.9",
     "vue": "^2.6.12",
-    "vue-hot-reload-api": "^2.3.4"
+    "vue-hot-reload-api": "^2.3.4",
+    "vue-lineup": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@parcel/resolver-glob": "^2.0.0-nightly.2338",
+    "@parcel/transformer-image": "^2.0.0-rc.0",
+    "@parcel/transformer-sass": "^2.0.0-rc.0",
     "@vue/component-compiler-utils": "^3.2.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "parcel-bundler": "^1.10.3",
-    "parcel-plugin-static-files-copy": "^2.6.0",
-    "parcel-plugin-structurize": "^2.4.0",
+    "parcel": "^2.0.0-rc.0",
+    "parcel-namer-custom": "^0.2.0",
+    "parcel-reporter-static-files-copy": "^1.3.0",
     "prettier": "^2.2.1",
     "sass": "^1.32.8",
     "vue-template-compiler": "^2.6.12"
@@ -43,29 +50,10 @@
     "staticPath": "pado_visualize/static_src",
     "watcherGlob": "images/*.jpg"
   },
-  "parcel-plugin-structurize": {
-    "rules": [
-      {
-        "match": "*_{grouphover,hover,pressed,rest}*.png",
-        "folder": "images/openseadragon"
-      },
-      {
-        "match": "*.{jpg,png}",
-        "folder": "images"
-      },
-      {
-        "match": "fa-*.{eot,svg,ttf,woff,woff2}",
-        "folder": "."
-      },
-      {
-        "match": "*.{css,css.map}",
-        "folder": "css"
-      },
-      {
-        "match": "*.{js,js.map}",
-        "folder": "js"
-      }
-    ],
-    "verbose": true
+  "parcel-namer-custom": {
+    "_(grouphover|hover|pressed|rest).*[.]png$": "images/openseadragon/[name].[ext]",
+    "[.](jpg|png)$": "images/[name].[hash].[ext]",
+    ".scss$": "css/[name].[hash].[type]",
+    "[.](js|js.map)$": "js/[name].[hash].[type]"
   }
 }
