--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.15.2",
     "deck.gl": "^8.5.0",
     "images": "^3.2.3",
+    "lineupjs": "^4.3.0",
     "math.gl": "^3.5.4",
     "normalize.css": "^8.0.1",
     "openseadragon": "^2.4.2",
