--- a/package.json
+++ b/package.json
@@ -11,22 +11,11 @@
     "favicons": "node scripts/favicons.js"
   },
   "dependencies": {
-    "@deck.gl/geo-layers": "^8.5.6",
-    "@deck.gl/layers": "^8.5.6",
-    "@loaders.gl/core": "^3.0.11",
     "core-js": "^3.15.2",
-    "deck.gl": "^8.5.0",
     "images": "^3.2.3",
-    "lineupjs": "^4.3.0",
     "math.gl": "^3.5.4",
     "normalize.css": "^8.0.1",
-    "openseadragon": "^2.4.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "regenerator-runtime": "^0.13.9",
-    "vue": "^2.6.12",
-    "vue-hot-reload-api": "^2.3.4",
-    "vue-lineup": "^4.0.0"
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
