--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "build": "parcel build --public-url /static --dist-dir pado_visualize/static pado_visualize/static_src/*.js",
-    "watch": "parcel watch --public-url /static --dist-dir pado_visualize/static pado_visualize/static_src/*.js",
-    "favicons": "node scripts/favicons.js"
+    "deploy": "webpack --mode production",
+    "build": "webpack --mode production",
+    "watch": "webpack --mode development --watch"
   },
   "dependencies": {
     "core-js": "^3.15.2",
@@ -18,32 +18,26 @@
     "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/preset-env": "^7.14.8",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.14.5",
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "@parcel/resolver-glob": "^2.0.0-nightly.2338",
-    "@parcel/transformer-image": "^2.0.0-rc.0",
-    "@parcel/transformer-sass": "^2.0.0-rc.0",
     "@vue/component-compiler-utils": "^3.2.0",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "parcel": "^2.0.0-rc.0",
-    "parcel-namer-custom": "^0.2.0",
-    "parcel-reporter-static-files-copy": "^1.3.0",
+    "extract-css-chunks-webpack-plugin": "^4.9.0",
+    "mini-css-extract-plugin": "^2.4.4",
+    "postcss-loader": "^6.2.0",
     "prettier": "^2.2.1",
-    "sass": "^1.32.8",
-    "vue-template-compiler": "^2.6.12"
-  },
-  "staticFiles": {
-    "staticPath": "pado_visualize/static_src",
-    "watcherGlob": "images/*.jpg"
-  },
-  "parcel-namer-custom": {
-    "_(grouphover|hover|pressed|rest).*[.]png$": "images/openseadragon/[name].[ext]",
-    "[.](jpg|png)$": "images/[name].[hash].[ext]",
-    ".scss$": "css/[name].[hash].[type]",
-    "[.](js|js.map)$": "js/[name].[hash].[type]"
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^5.62.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0"
   }
 }
