--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@vue/component-compiler-utils": "^3.2.0",
     "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.5.1",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
