--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@pnp/nodejs-commonjs": "^2.10.0",
+    "@pnp/sp-commonjs": "^2.10.0",
     "@recogito/annotorious": "^2.5.10",
     "@recogito/annotorious-openseadragon": "^2.5.10",
     "@recogito/annotorious-selector-pack": "^0.3.3",
     "core-js": "^3.15.2",
     "images": "^3.2.3",
+    "lineupjs": "^4.3.0",
     "math.gl": "^3.5.4",
     "normalize.css": "^8.0.1",
     "openseadragon": "^2.4.2",
@@ -40,6 +43,7 @@
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.6",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^5.62.1",
     "webpack-cli": "^4.9.1",
