--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "@recogito/annotorious-openseadragon": "^2.5.10",
     "@recogito/annotorious-selector-pack": "^0.3.3",
     "core-js": "^3.15.2",
-    "images": "^3.2.3",
     "lineupjs": "^4.3.0",
-    "math.gl": "^3.5.4",
     "normalize.css": "^8.0.1",
     "openseadragon": "^2.4.2",
     "regenerator-runtime": "^0.13.9"
@@ -33,6 +31,7 @@
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.5.1",
+    "cssnano": "^5.0.10",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
