pado_visualize: remove unused dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,11 +9,10 @@ classifiers =
 [options]
 packages =
     find:
-python_requires = >=3.9
+python_requires = >=3.8
 install_requires =
     Flask-Caching>=1.8.0
     Flask-JSGlue
-    appdirs
     celery
     click
     diskcache
@@ -30,6 +29,7 @@ install_requires =
     pandas
     pandas
     pillow
+    platformdirs
     pyarrow
     pydantic
     pyopenssl
