--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "@recogito/annotorious-openseadragon": "^2.5.10",
     "@recogito/annotorious-selector-pack": "^0.3.3",
     "core-js": "^3.15.2",
+    "deck.gl": "^8.6.4",
     "lineupjs": "^4.3.0",
     "normalize.css": "^8.0.1",
     "openseadragon": "^2.4.2",
+    "prop-types": "^15.7.2",
     "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/plugin-syntax-jsx": "^7.16.0",
+    "@babel/plugin-transform-react-jsx": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-react": "^7.16.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@vue/component-compiler-utils": "^3.2.0",
     "babel-loader": "^8.2.3",
@@ -35,6 +39,7 @@
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.27.1",
     "extract-css-chunks-webpack-plugin": "^4.9.0",
     "mini-css-extract-plugin": "^2.4.4",
     "postcss-loader": "^6.2.0",
