--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@recogito/annotorious-selector-pack": "^0.3.3",
     "core-js": "^3.15.2",
     "deck.gl": "^8.6.4",
-    "lineupjs": "^4.3.0",
+    "lineupjs": "4.2.*",
     "normalize.css": "^8.0.1",
     "openseadragon": "^2.4.2",
     "prop-types": "^15.7.2",
