--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@deck.gl/core": "^8.6.4",
     "@pnp/nodejs-commonjs": "^2.10.0",
     "@pnp/sp-commonjs": "^2.10.0",
     "@recogito/annotorious": "^2.5.10",
