--- a/dev/pavo.conf
+++ b/dev/pavo.conf
@@ -16,7 +16,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 directory = .
 environment =
-    FLASK_APP=pado_visualize.app:create_app,
+    FLASK_APP=pavo.app:create_app,
     FLASK_DEBUG=1,
     FLASK_ENV=development
 command = flask run
