--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pado_visualize",
-  "version": "0.0.2",
+  "name": "pavo",
+  "version": "0.0.3",
   "description": "",
   "keywords": [],
   "author": "",
