--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
-name = pado_visualize
+name = pavo
 author = Andreas Poehlmann
 author_email = andreas.poehlmann@bayer.com
-url = https://github.com/bayer-science-for-a-better-life/pado_visualize
+url = https://github.com/bayer-group/pavo
 classifiers =
     Development Status :: 3 - Alpha
 
@@ -44,4 +44,4 @@ build_requires =
 
 [options.entry_points]
 console_scripts =
-    pado-visualize = pado_visualize.__main__:cli
+    pavo = pavo.__main__:cli
