--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,14 @@ install_requires =
 build_requires =
     setuptools_scm
 
+[options.extras_require]
+dev =
+    pre-commit
+    black
+    pytest>=6
+    pytest-cov
+    mypy
+
 [options.entry_points]
 console_scripts =
     pavo = pavo.__main__:cli
