--- a/.github/workflows/run_pytests.yaml
+++ b/.github/workflows/run_pytests.yaml
@@ -30,6 +30,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Set up nodejs
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - name: Install Pavo
         run: python -m pip install .[dev]
       - name: Run Tests
@@ -67,6 +71,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.8
+      - name: Set up nodejs
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -104,6 +112,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.8
+      - name: Set up nodejs
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
