--- a/.github/workflows/run_pytests.yaml
+++ b/.github/workflows/run_pytests.yaml
@@ -49,6 +49,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.8
+      - name: Set up nodejs
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
