--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,12 +24,18 @@ repos:
         -    flake8-typing-imports
         language_version: python3
         exclude: "^(build|docs|tests|setup.py)"
-# -   repo: https://github.com/pre-commit/mirrors-mypy
-#     rev: 'v0.931'
-#     hooks:
-#     -   id: mypy
-#         additional_dependencies: ["pydantic"]
-#         exclude: "^(build|docs|tests|setup.py)"
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: 'v1.0.1'
+    hooks:
+    -   id: mypy
+        args: [--python-version=3.8]
+        additional_dependencies: [
+            "--no-deps",
+            "pydantic==1.10.2",
+            "pado==0.12.0",
+            "flask==2.2.3",
+        ]
+        exclude: "^(build|docs|pavo/tests|scripts|setup.py)"
 -   repo: https://github.com/asottile/pyupgrade
     rev: v3.3.1
     hooks:
