--- a/package.json
+++ b/package.json
@@ -14,19 +14,15 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "@deck.gl/core": "^8.6.4",
-    "@pnp/nodejs-commonjs": "^2.10.0",
-    "@pnp/sp-commonjs": "^2.10.0",
-    "@recogito/annotorious": "^2.5.10",
-    "@recogito/annotorious-openseadragon": "^2.5.10",
-    "@recogito/annotorious-selector-pack": "^0.3.3",
-    "core-js": "^3.15.2",
-    "deck.gl": "^8.6.4",
-    "lineupjs": "4.2.*",
+    "@deck.gl/core": "^8.8.26",
+    "@recogito/annotorious": "^2.7.10",
+    "@recogito/annotorious-openseadragon": "^2.7.10",
+    "@recogito/annotorious-selector-pack": "^0.5.3",
+    "deck.gl": "^8.8.26",
+    "lineupjs": "^4.7.0",
     "normalize.css": "^8.0.1",
-    "openseadragon": "^2.4.2",
-    "prop-types": "^15.7.2",
-    "regenerator-runtime": "^0.13.9"
+    "openseadragon": "^3.1.0",
+    "prop-types": "^15.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
