repo: update repo docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,30 @@ name = pavo
 author = Andreas Poehlmann
 author_email = andreas.poehlmann@bayer.com
 url = https://github.com/bayer-group/pavo
+download_url = https://github.com/bayer-group/pavo
+license = BSD
+license_file = LICENSE
+description = PAthological Visualisation Obsession
+long_description = file: README.md
+long_description_content_type = text/markdown
 classifiers =
     Development Status :: 3 - Alpha
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: BSD License
+    Programming Language :: Python
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Topic :: Scientific/Engineering
+    Topic :: Scientific/Engineering :: Information Analysis
+    Topic :: Scientific/Engineering :: Bio-Informatics
+    Topic :: Utilities
+    Operating System :: Microsoft :: Windows
+    Operating System :: POSIX
+    Operating System :: Unix
+    Operating System :: MacOS
 
 [options]
 packages =
