--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,43 +1,49 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
-    hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-added-large-files
--   repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-    -   id: isort
--   repo: https://github.com/psf/black
-    rev: '23.1.0'
-    hooks:
-    -   id: black
-        language_version: python3
--   repo: https://github.com/PyCQA/flake8
-    rev: '6.0.0'
-    hooks:
-    -   id: flake8
-        additional_dependencies:
-        -    flake8-typing-imports
-        language_version: python3
-        exclude: "^(build|docs|tests|setup.py)"
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v1.0.1'
-    hooks:
-    -   id: mypy
-        args: [--python-version=3.8]
-        additional_dependencies: [
-            "--no-deps",
-            "pydantic==1.10.2",
-            "pado==0.12.0",
-            "flask==2.2.3",
-        ]
-        exclude: "^(build|docs|pavo/tests|scripts|setup.py)"
--   repo: https://github.com/asottile/pyupgrade
-    rev: v3.3.1
-    hooks:
-    -   id: pyupgrade
-        args: [--py38-plus, --keep-runtime-typing]
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.4.0
+  hooks:
+  - id: trailing-whitespace
+  - id: end-of-file-fixer
+  - id: check-added-large-files
+- repo: https://github.com/pycqa/isort
+  rev: 5.12.0
+  hooks:
+  - id: isort
+- repo: https://github.com/psf/black
+  rev: '23.1.0'
+  hooks:
+  - id: black
+    language_version: python3
+- repo: https://github.com/PyCQA/flake8
+  rev: '6.0.0'
+  hooks:
+  - id: flake8
+    additional_dependencies: [
+      "flake8-typing-imports",
+    ]
+    language_version: python3
+    exclude: "^(build|docs|tests|setup.py)"
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: 'v1.0.1'
+  hooks:
+  - id: mypy
+    args: [--python-version=3.8]
+    additional_dependencies: [
+      "--no-deps",
+      "pydantic==1.10.2",
+      "pado==0.12.0",
+      "flask==2.2.3",
+    ]
+    exclude: "^(build|docs|pavo/tests|scripts|setup.py)"
+- repo: https://github.com/asottile/pyupgrade
+  rev: v3.3.1
+  hooks:
+  - id: pyupgrade
+    args: [--py38-plus, --keep-runtime-typing]
+- repo: https://github.com/PyCQA/bandit
+  rev: '1.7.4'
+  hooks:
+    - id: bandit
+      args: ["--ini", ".bandit", "-lll"]
