pavo: clean dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,30 +36,22 @@ install_requires =
     Flask-Caching>=1.8.0
     celery
     click
-    diskcache
     dynaconf
     filelock
     flask>=2
-    flower
     fsspec
-    geojson-pydantic
-    imagecodecs
-    numpy
+    geopandas
+    itsdangerous
     orjson
-    pado
+    pado>=0.12
     pandas
     pillow
-    platformdirs
-    pyarrow
-    pydantic
-    pyopenssl
-    rasterio
     redis
-    s3fs
-    shapely
-    tiffslide
+    tiffslide>=2
     typer
+    typing_extensions
     tqdm
+    werkzeug
 build_requires =
     setuptools_scm
 
