--- a/setup.cfg
+++ b/setup.cfg
@@ -33,14 +33,15 @@ packages =
     find:
 python_requires = >=3.8
 install_requires =
-    Flask-Caching>=1.8.0
     celery
     click
     dynaconf
     filelock
+    flask-caching>=1.8.0
     flask>=2
     fsspec
     geopandas
+    gunicorn
     itsdangerous
     orjson
     pado>=0.12
@@ -48,9 +49,9 @@ install_requires =
     pillow
     redis
     tiffslide>=2
-    typer
-    typing_extensions
     tqdm
+    typer
+    typing-extensions
     werkzeug
 build_requires =
     setuptools_scm
