dev: update dev instructions

--- a/dev/pavo.conf
+++ b/dev/pavo.conf
@@ -1,13 +1,13 @@
 [supervisord]
 nodaemon=true
 
-[program:parcel]
+[program:pavo-js-watch]
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 directory = .
-command = npm run watch
+command = pavo development js --watch
 
 [program:flask]
 stdout_logfile=/dev/stdout
@@ -15,8 +15,4 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 directory = .
-environment =
-    FLASK_APP=pavo.app:create_app,
-    FLASK_DEBUG=1,
-    FLASK_ENV=development
-command = flask run
+command = pavo development run --debug
