pavo: make metadata columns configurable

--- a/.pavo.toml
+++ b/.pavo.toml
@@ -23,6 +23,14 @@ OAUTH_PROVIDER = "none"
 # the datasets
 DATASET_PATHS = []
 
+# columns
+metadata_extra_column_mode = "ignore_missing"
+metadata_extra_columns = [
+    { name = "compound_name", type = "categorical", label = "Compound" },
+    { name = "organ", type = "categorical", label = "Organ" },
+    { name = "species", type = "categorical", label = "Species" },
+]
+
 
 [development]
 DEBUG = true
